新增切換黑暗模式功能，並更新相關按鈕事件處理邏輯

--- a/Js Tip/chrom extensions/reader-focus-extension/popup.html
+++ b/Js Tip/chrom extensions/reader-focus-extension/popup.html
@@ -116,6 +116,10 @@
   </div>
 
   <div class="button-container">
+    <button id="toggle-dark-mode">切換黑暗模式</button>
+  </div>
+
+  <div class="button-container">
     <button id="toggle-focus">選取閱讀區塊</button>
   </div>
 
