--- a/Js Tip/chrom extensions/reader-focus-extension/popup.html
+++ b/Js Tip/chrom extensions/reader-focus-extension/popup.html
@@ -120,6 +120,10 @@
   </div>
 
   <div class="button-container">
+    <button id="take-screenshot">全頁截圖</button>
+  </div>
+
+  <div class="button-container">
     <button id="toggle-focus">選取閱讀區塊</button>
   </div>
 
