--- a/Js Tip/chrom extensions/reader-focus-extension/options.html
+++ b/Js Tip/chrom extensions/reader-focus-extension/options.html
@@ -23,6 +23,17 @@
       </form>
     </div>
 
+    <!-- 自動黑暗模式管理 -->
+    <div class="section">
+      <h2>自動黑暗模式網站列表</h2>
+      <p>列於此處的網站將在開啟時自動套用黑暗模式。</p>
+      <ul id="darkmode-sites-list"></ul>
+      <form id="add-dark-site-form">
+        <input type="text" id="new-dark-site-input" placeholder="例如：www.example.com">
+        <button type="submit" id="add-dark-site-btn">新增</button>
+      </form>
+    </div>
+
   </div>
 
   <script src="options.js"></script>
